--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -266,6 +266,19 @@
                 </div>
                 <div class="settingsFileSelDesc">All game files and local Java installations will be stored in the data directory.<br>Screenshots and world saves are stored in the instance folder for the corresponding server configuration.</div>
             </div>-->
+            <div class="settingsServerCodeContainer">
+                <div class="settingsServerCodeTitle">Votre Code Beta-test</div>
+                <div class="settingsServerCodeContent">
+                    <div class="settingsServerCodeActions">
+                        <input class="settingsInputServerCodeVal" placeholder="Enter Code" type="text">
+                        <button class="settingsInputServerCodeButton" id="settingsAddServerCode">Add Code</button>
+                    </div>
+                </div>
+                <div id="settingsServerCodesListContent">
+
+                </div>
+                <div class="settingsServerCodesDesc">Entrer votre code Beta-Test pour acceder au serveurs Dev.</div>
+            </div>
         </div>
         <div id="settingsTabAbout" class="settingsTab" style="display: none;">
             <div class="settingsTabHeader">
