--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -6,9 +6,9 @@
     <div id="welcomeContent">
         <img id="welcomeImageSeal" src="assets/images/SealCircle.png"/>
         <span id="welcomeHeader">Bienvenue sur le Palifen Launcher</span>
-        <span id="welcomeDescription">Palifen Launcher vous permet de gerer votre jeu inteligemment et de façon optimiser mais aussi vous permet d'avoir acces a des fonctions Exclusive des serveurs Palifen.</span>
+        <span id="welcomeDescription">Palifen Launcher vous permet de gérer votre jeu intelligemment et de façon optimisée, mais aussi vous permet d'avoir accès à des fonctions exclusives des serveurs Palifen.</span>
         <br>
-        <span id="welcomeDescCTA">Aller c'est l'heure de Commencer!</span>
+        <span id="welcomeDescCTA">Aller, c'est l'heure de commencer !</span>
         <button id="welcomeButton">
             <div id="welcomeButtonContent">
                 CONTINUE
