--- a/app/login.ejs
+++ b/app/login.ejs
@@ -17,7 +17,7 @@
             </g>
           </svg>
           <span class="loginErrorSpan" id="loginEmailError">* Invalid Value</span>
-          <input id="loginUsername" class="loginField" type="text" placeholder="EMAIL OR USERNAME" />
+          <input id="loginUsername" class="loginField" type="text" placeholder="Pseudo ou Email" />
         </div>
         <div class="loginFieldContainer">
           <svg id="lockSVG" class="loginSVG" viewBox="40 32 60.36 70.43">
@@ -27,7 +27,7 @@
             </g>
           </svg>
           <span class="loginErrorSpan" id="loginPasswordError">* Required</span>
-          <input id="loginPassword" class="loginField" type="password" placeholder="PASSWORD" />
+          <input id="loginPassword" class="loginField" type="password" placeholder="Mot de passe" />
         </div>
         <div id="loginOptions">
           <span class="loginSpanDim">
