--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -270,8 +270,8 @@
                 <div class="settingsServerCodeTitle">Votre Code Beta-test</div>
                 <div class="settingsServerCodeContent">
                     <div class="settingsServerCodeActions">
-                        <input class="settingsInputServerCodeVal" placeholder="Enter Code" type="text">
-                        <button class="settingsInputServerCodeButton" id="settingsAddServerCode">Add Code</button>
+                        <input class="settingsInputServerCodeVal" placeholder="Le code" type="text">
+                        <button class="settingsInputServerCodeButton" id="settingsAddServerCode">Activer le code</button>
                     </div>
                 </div>
                 <div id="settingsServerCodesListContent">
@@ -313,7 +313,7 @@
             <div class="settingsChangelogContainer">
                 <div class="settingsChangelogContent">
                     <div class="settingsChangelogHeadline">
-                        <div class="settingsChangelogLabel">Release Notes</div>
+                        <div class="settingsChangelogLabel">Note de Release</div>
                         <div class="settingsChangelogTitle">Changelog</div>
                     </div>
                     <div class="settingsChangelogText">
