--- a/app/landing.ejs
+++ b/app/landing.ejs
@@ -11,9 +11,9 @@
         <div id="right">
             <div id="rightContainer">
                 <div id="user_content">
-                    <span id="user_text">Username</span>
+                    <span id="user_text">Pseudo</span>
                     <div id="avatarContainer">
-                        <button id="avatarOverlay">Edit</button>
+                        <button id="avatarOverlay">Editer</button>
                     </div>
                 </div>
                 <div id="mediaContent">
@@ -58,12 +58,12 @@
             <div class="bot_wrapper">
                 <div id="content">
                     <div id="server_status_wrapper">
-                        <span class="bot_label" id="landingPlayerLabel">SERVER</span>
-                        <span id="player_count">OFFLINE</span>
+                        <span class="bot_label" id="landingPlayerLabel">SERVEUR</span>
+                        <span id="player_count">HORS LIGNE</span>
                     </div>
                     <div class="bot_divider"></div>
                     <div id="mojangStatusWrapper">
-                        <span class="bot_label">MOJANG STATUS</span>
+                        <span class="bot_label">ETAT DE MOJANG</span>
                         <span id="mojang_status_icon">&#8226;</span>
                         <div id="mojangStatusTooltip">
                             <div id="mojangStatusTooltipTitle">Services</div>
@@ -72,7 +72,7 @@
                             </div>
                             <div id="mojangStatusNEContainer">
                                 <div class="mojangStatusNEBar"></div>
-                                <div id="mojangStatusNETitle">Non&nbsp;Essential</div>
+                                <div id="mojangStatusNETitle">Non&nbsp;Essentiel</div>
                                 <div class="mojangStatusNEBar"></div>
                             </div>
                             <div id="mojangStatusNonEssentialContainer">
@@ -105,7 +105,7 @@
                 <div id="launch_content">
                     <button id="launch_button">Jouer</button>
                     <div class="bot_divider"></div>
-                    <button id="server_selection_button" class="bot_label">&#8226; No Server Selected</button>
+                    <button id="server_selection_button" class="bot_label">&#8226; Aucun serveur séléctionner</button>
                 </div>
                 <div id="launch_details">
                     <div id="launch_details_left">
@@ -114,7 +114,7 @@
                     </div>
                     <div id="launch_details_right">
                         <progress id="launch_progress" value="22" max="100"></progress>
-                        <span id="launch_details_text" class="bot_label">Please wait..</span>
+                        <span id="launch_details_text" class="bot_label">Merci de patienter..</span>
                     </div>
                 </div>
             </div>
