--- a/app/overlay.ejs
+++ b/app/overlay.ejs
@@ -34,7 +34,7 @@
         <div id="overlayActionContainer">
             <button id="overlayAcknowledge" class="overlayKeybindEnter">Conare Iterum</button>
             <div id="overlayDismissWrapper">
-                <button id="overlayDismiss" style="display: none;" class="overlayKeybindEsc">Dismiss</button>
+                <button id="overlayDismiss" style="display: none;" class="overlayKeybindEsc">Annuler</button>
             </div>
         </div>
     </div>
