--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -306,7 +306,7 @@
                     <a href="https://github.com/Palifen/PalifenLauncher" id="settingsAboutSourceButton" class="settingsAboutButton">Source (GitHub)</a>
                     <!-- The following must be included in third-party usage. -->
                     <a href="https://github.com/dscalzi/HeliosLauncher" id="settingsAboutSourceButton" class="settingsAboutButton">Original Source</a>
-                    <a href="https://github.com/Palifen/PalifenLauncher/issues" id="settingsAboutSupportButton" class="settingsAboutButton">Support</a>
+                    <a href="https://github.com/Palifen/PalifenLauncher/issues" id="settingsAboutSupportButton" class="settingsAboutButton">Bug report</a>
                     <!--<a href="#" id="settingsAboutDevToolsButton" class="settingsAboutButton">DevTools Console</a>-->
                 </div>
             </div>
