--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -267,7 +267,7 @@
                 <div class="settingsFileSelDesc">All game files and local Java installations will be stored in the data directory.<br>Screenshots and world saves are stored in the instance folder for the corresponding server configuration.</div>
             </div>-->
             <div class="settingsServerCodeContainer">
-                <div class="settingsServerCodeTitle">Votre Code Beta-test</div>
+                <div class="settingsServerCodeTitle">Votre Code D'Acces Serveur Tiers</div>
                 <div class="settingsServerCodeContent">
                     <div class="settingsServerCodeActions">
                         <input class="settingsInputServerCodeVal" placeholder="Le code" type="text">
@@ -277,7 +277,7 @@
                 <div id="settingsServerCodesListContent">
 
                 </div>
-                <div class="settingsServerCodesDesc">Entrer votre code Beta-Test pour acceder au serveurs Dev.</div>
+                <div class="settingsServerCodesDesc">Entrer votre code d'acces pour acceder au serveurs tiers de Palifen.</div>
             </div>
         </div>
         <div id="settingsTabAbout" class="settingsTab" style="display: none;">
